First step of database integration

--- a/ERDStatistics/nbproject/project.properties
+++ b/ERDStatistics/nbproject/project.properties
@@ -33,12 +33,14 @@ dist.jar=${dist.dir}/ERDStatistics.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-8.0.29-tidb-1.0.2.jar=lib/mysql-connector-java-8.0.29-tidb-1.0.2.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.mysql-connector-java-8.0.29-tidb-1.0.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -116,7 +118,8 @@ platform.active=JDK_1.8
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.mysql-connector-java-8.0.29-tidb-1.0.2.jar}
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
