Insert express route direct data into dtabase

--- a/.ERD.properties
+++ b/.ERD.properties
@@ -1,8 +1,13 @@
-#
+#---------------------------------------------
+# Properties for project ERD.Statistics
+# 28.12.2022
+#---------------------------------------------
+# Data directory
 CSVDIR=/users/rbit/ERDStatistics;Infrastruktur
 CSVDIR=/users/rbit/ERDStatistics;ODSTest
-#
-DATABASE_DRIVER=com.mysql.cj.jdbc.Driver
+#---------------------------------------------
+# Database properties
+DATABASE_DRIVER="com.mysql.cj.jdbc.Driver"
 DATABASE_URL=jdbc:mysql://localhost:3306/ERD
 USERNAME=erd
 PASSWORD=erd
