--- a/ERDStatistics/nbproject/private/private.properties
+++ b/ERDStatistics/nbproject/private/private.properties
@@ -10,4 +10,4 @@ javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=/usr/bin/open
 jlink.strip=false
-user.properties.file=/Users/rbit/Library/Application Support/NetBeans/15/build.properties
+user.properties.file=C:\\Users\\RBO-VS-Admin\\AppData\\Roaming\\NetBeans\\15\\build.properties
