--- a/ERDStatistics/nbproject/project.properties
+++ b/ERDStatistics/nbproject/project.properties
@@ -73,9 +73,9 @@ javadoc.windowtitle=
 javafx.application.implementation.version=1.0
 javafx.binarycss=false
 javafx.classpath.extension=\
-    ${platforms.jdk1.8.0_65.jdk.home}/jre/lib/javaws.jar:\
-    ${platforms.jdk1.8.0_65.jdk.home}/jre/lib/deploy.jar:\
-    ${platforms.jdk1.8.0_65.jdk.home}/jre/lib/plugin.jar
+    ${platforms.JDK_1.8.home}/jre/lib/javaws.jar:\
+    ${platforms.JDK_1.8.home}/jre/lib/deploy.jar:\
+    ${platforms.JDK_1.8.home}/jre/lib/plugin.jar
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
@@ -114,7 +114,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=jdk1.8.0_65.jdk
+platform.active=JDK_1.8
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
