--- a/.ERD.properties
+++ b/.ERD.properties
@@ -5,6 +5,7 @@
 # Data directory
 CSVDIR=/users/rbit/ERDStatistics;Infrastruktur
 CSVDIR=/users/rbit/ERDStatistics;ODSTest
+ERDDIR=/users/rbit/ERDStatistics
 #---------------------------------------------
 # Database properties
 DATABASE_DRIVER="com.mysql.cj.jdbc.Driver"
