--- a/ERDStatistics/build.xml
+++ b/ERDStatistics/build.xml
@@ -51,24 +51,43 @@
 
     -->
         <target name="db-export-database" description="export data of schema">
-		<echo message="Export data of database ERD into SQL-File"/>
-		<!-- mysqldump -u erd -p erd > data.sql -->
-	</target>
+			<echo message="Export data of database ERD into SQL-File"/>
+			<exec executable="mysqldump" output="..\database\dumps\data.sql">
+				<arg value="--user=erd"/>
+				<arg value="--password=erd"/>
+				<arg value="--host=localhost"/>
+				<arg value="--port=3306"/>
+				<arg value="erd"/>
+			</exec>
+		</target>
 
 	<target name="db-export-datastructure" description="export only data structure of schema">
 		<echo message="Export data structure of database ERD into SQL-File"/>
-		<!-- mysqldump -u erd -p erd -d > datastructure.sql -->
+		<exec executable="mysqldump" output="..\database\dumps\datastructure.sql">
+			<arg value="--user=erd"/>
+			<arg value="--password=erd"/>
+			<arg value="--host=localhost"/>
+			<arg value="--port=3306"/>
+			<arg value="erd -d"/>
+		</exec>
 	</target>
 
         <target name="db-export-storedprocedure" description="export stored proceudre and functions of schema">
 		<echo message="Export Stored Procedures and Functions of database ERD into SQL-File"/>
-		<!-- mysqldump -u erd -p erd -d > datastructure.sql -->
+		<exec executable="mysqldump" output="..\database\dumps\datastructure.sql">
+			<arg value="--user=erd"/>
+			<arg value="--password=erd"/>
+			<arg value="--host=localhost"/>
+			<arg value="--port=3306"/>
+			<arg value="erd -n -d -t --routines"/>
+		</exec>
 	</target>
 
 	<target name="db-import-database" description="import data of schema">
 		<echo message="Import data of database ERD from SQL-File"/>
-		<!-- mysqldump -u erd -p erd -n -d -t --routines > StPAndF.sql -->
+		
 	</target>
+	
 	<target name="db-import-datastructure" description="import only data structure of schema">
 		<echo message="Import data structure of database ERD from SQL-File"/>
 	</target>
