--- a/ERDStatistics/build.xml
+++ b/ERDStatistics/build.xml
@@ -50,16 +50,22 @@
     nbproject/build-impl.xml and nbproject/jfx-impl.xml.
 
     -->
-        <target name="db-export-database" description="export data of schema">
-			<echo message="Export data of database ERD into SQL-File"/>
-			<exec executable="mysqldump" output=".\database\dumps\data.sql">
-				<arg value="--user=erd"/>
-				<arg value="--password=erd"/>
-				<arg value="--host=localhost"/>
-				<arg value="--port=3306"/>
-				<arg value="erd"/>
-			</exec>
-		</target>
+	<target name="db-export" 
+			description="export db data, structure and stored procedures" 
+	        depends="db-export-database, db-export-datastructure, db-export-storedprocedure">
+		<echo message="Export db data, structure and stored proceduresdatabase ERD into SQL-File"/>
+	</target>
+	
+    <target name="db-export-database" description="export data of schema">
+		<echo message="Export data of database ERD into SQL-File"/>
+		<exec executable="mysqldump" output=".\database\dumps\data.sql">
+			<arg value="--user=erd"/>
+			<arg value="--password=erd"/>
+			<arg value="--host=localhost"/>
+			<arg value="--port=3306"/>
+			<arg value="erd"/>
+		</exec>
+	</target>
 
 	<target name="db-export-datastructure" description="export only data structure of schema">
 		<echo message="Export data structure of database ERD into SQL-File"/>
