--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ ERDStatistics/build/
 ERDStatistics/dist/
 ERDStatistics/nbproject/private/private.properties
 ERDStatistics/database/dumps/data.sql
+ERDStatistics/database_20240508.zip
