--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ ERDStatistics/dist/
 ERDStatistics/nbproject/private/private.properties
 ERDStatistics/database/dumps/data.sql
 ERDStatistics/database_20240508.zip
+/ERDStatistics/nbproject
