--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 ERDStatistics/build/
 ERDStatistics/dist/
 ERDStatistics/nbproject/private/private.properties
-ERDStatistics/database/dumps/data.sql
+ERDStatistics/database/dumps/
 ERDStatistics/database_20240508.zip
 /ERDStatistics/nbproject
