--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 ERDStatistics/build/
 ERDStatistics/dist/
 ERDStatistics/database/dumps/
-ERDStatistics/nbproject/project.properties
+nbproject/project.properties
